Changes: ChooseCategory.java - Added Database Helper to allow the category to make Items/Questions out of the data retrieved once that category is selected.
Game.java
- Changed the textQuestion to imageQuestion. Instead of displaying text as a question, an image will be shown instead and the user will have to guess the answer from that.

DatabaseHelper
- Added additional functions for retrieving random wrong answers, getting the name of an answer given its ID in the database.

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -20,11 +20,10 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent">
 
-        <TextView
-            android:id="@+id/textQuestion"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/imageQuestion"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Question?"
             android:textAlignment="center"
             android:textSize="24sp" />
 
