--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -9,21 +9,38 @@
     tools:layout_editor_absoluteX="0dp">
 
     <TextView
+        android:id="@+id/timerTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.977"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.017"
+        tools:text="0" />
+
+    <TextView
         android:id="@+id/scoreTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        tools:text="0"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.022"
-        app:layout_constraintVertical_bias="0.017" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.017"
+        tools:text="0" />
 
     <LinearLayout
         android:layout_width="368dp"
@@ -44,6 +61,8 @@
             android:id="@+id/imageQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="false"
+            android:cropToPadding="false"
             android:textAlignment="center"
             android:textSize="24sp" />
 
@@ -54,17 +73,21 @@
 
             <Button
                 android:id="@+id/buttonA"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="A" />
+                android:text="A"
+                android:textAllCaps="false"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/buttonB"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="B" />
+                android:text="B"
+                android:textAllCaps="false"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -76,17 +99,21 @@
 
             <Button
                 android:id="@+id/buttonC"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="C" />
+                android:text="C"
+                android:textAllCaps="false"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/buttonD"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="D" />
+                android:text="D"
+                android:textAllCaps="false"
+                android:textSize="12sp" />
         </LinearLayout>
 
     </LinearLayout>
