--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,10 @@
         <item name="colorPrimary">@color/colorPrimary</item>
     </style>
 
+    <style name="FTS_Yellow.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar" />
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background</item>
+    </style>
+
 </resources>
