--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -7,7 +7,7 @@
     tools:context="com.teamenigma.factthisshoot.GameOver">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
@@ -18,7 +18,17 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Game Over!"
+            android:textAlignment="center"
+            android:textSize="36sp" />
 
         <ImageView
             android:id="@+id/imageViewGameOver"
@@ -32,7 +42,7 @@
             android:layout_height="wrap_content"
             android:text="Score:"
             android:textAlignment="center"
-            android:textSize="30sp" />
+            android:textSize="36sp" />
 
         <TextView
             android:id="@+id/textViewScore"
