Added Check and Cross Marks
Added:
- Check and Cross Marks will display whenever you get a correct or incorrect answer respectively.
- Splash screen now includes both CrownHeads and TeamEnigma logo.

Fixed:
- Launcher icon follows the new logo.

--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -3,7 +3,7 @@
     <item android:drawable="@color/colorPrimary" />
     <item>
         <bitmap
-            android:src="@drawable/crownheads_logo_circle"
+            android:src="@drawable/logos"
             android:gravity="center"/>
     </item>
 </layer-list>
