--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -22,19 +22,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Game Over!"
-            android:textAlignment="center"
-            android:textSize="36sp" />
-
         <ImageView
             android:id="@+id/imageViewGameOver"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/beagle" />
+            android:layout_width="wrap_content"
+            android:layout_height="226dp"
+            app:srcCompat="@drawable/message_gameover" />
 
         <TextView
             android:id="@+id/textView"
@@ -62,6 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:backgroundTint="@color/colorPrimary"
                 android:text="Play Again" />
 
             <Button
