--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -218,4 +218,15 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
+    <TextView
+        android:id="@+id/textAddedScore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+100"
+        android:textSize="24sp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="14dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewScore" />
+
 </android.support.constraint.ConstraintLayout>
