--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -229,4 +229,14 @@
         android:layout_marginTop="14dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewScore" />
 
+    <ImageButton
+        android:id="@+id/imageButtonMute"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@android:drawable/stat_notify_call_mute" />
+
 </android.support.constraint.ConstraintLayout>
