--- a/app/src/main/res/values/games-ids.xml
+++ b/app/src/main/res/values/games-ids.xml
@@ -8,6 +8,12 @@ Save this file as res/values/games-ids.xml in your project.
     <string name="app_id" translatable="false">556605380910</string>
     <!-- package_name -->
     <string name="package_name" translatable="false">com.teamenigma.factthisshoot</string>
-    <!-- leaderboard Best in Dogs -->
-    <string name="leaderboard_best_in_dogs" translatable="false">CgkIrrKQwpkQEAIQAQ</string>
+    <!-- achievement Hello World! -->
+    <string name="achievement_hello_world" translatable="false">CgkIrrKQwpkQEAIQAg</string>
+    <!-- leaderboard Top Scorers: Dogs -->
+    <string name="leaderboard_top_scorers_dogs" translatable="false">CgkIrrKQwpkQEAIQAQ</string>
+    <!-- leaderboard Top Scorers: Flowers -->
+    <string name="leaderboard_top_scorers_flowers" translatable="false">CgkIrrKQwpkQEAIQAw</string>
+    <!-- leaderboard Top Scorers: Planets -->
+    <string name="leaderboard_top_scorers_planets" translatable="false">CgkIrrKQwpkQEAIQBA</string>
 </resources>
