--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -237,6 +237,6 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@android:drawable/stat_notify_call_mute" />
+        app:srcCompat="@drawable/ic_volume_up_black_24dp" />
 
 </android.support.constraint.ConstraintLayout>
