--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -49,43 +49,47 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <Button
+            <ImageButton
                 android:id="@+id/buttonPlayAgain"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="64dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/colorPrimary"
-                android:text="Play Again" />
+                app:srcCompat="@drawable/ic_replay_black_24dp" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/buttonMenu"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="64dp"
                 android:layout_weight="1"
-                android:text="Menu" />
+                app:srcCompat="@drawable/ic_home_black_24dp" />
+
         </LinearLayout>
 
     </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/buttonOnlineHighScores"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:text="Online High Scores"
-        android:textSize="12sp"
+        android:cropToPadding="false"
+        android:elevation="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_public_black_24dp" />
 
-    <Button
+    <ImageButton
         android:id="@+id/buttonLocalHighScores"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Local High Scores"
-        android:textSize="12sp"
+        android:cropToPadding="false"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_person_black_24dp" />
 </android.support.constraint.ConstraintLayout>
