Added Sports HighScore
Added:
- High score save for Sports

Changed:
- UI of HighScore Activity is now ListView.

--- a/app/src/main/res/values/games-ids.xml
+++ b/app/src/main/res/values/games-ids.xml
@@ -16,4 +16,6 @@ Save this file as res/values/games-ids.xml in your project.
     <string name="leaderboard_top_scorers_flowers" translatable="false">CgkIrrKQwpkQEAIQAw</string>
     <!-- leaderboard Top Scorers: Planets -->
     <string name="leaderboard_top_scorers_planets" translatable="false">CgkIrrKQwpkQEAIQBA</string>
+    <!-- leaderboard Top Scorers: Sports -->
+    <string name="leaderboard_top_scorers_sports" translatable="false">CgkIrrKQwpkQEAIQBQ</string>
 </resources>
