--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -109,7 +109,7 @@
         <ImageView
             android:id="@+id/imageQuestion"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:adjustViewBounds="false"
             android:cropToPadding="false"
             android:textAlignment="center"
